--- a/_frontend/_layout/menu.html
+++ b/_frontend/_layout/menu.html
@@ -141,6 +141,11 @@
           <i class="fas fa-th-large"></i>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" onclick="logout()" role="button">
+          <i class="fas fa-sign-out-alt"></i>
+        </a>
+      </li>
     </ul>
   </nav>
   <!-- /.navbar -->
