--- a/_frontend/_layout/head.html
+++ b/_frontend/_layout/head.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WPL BI</title>
-
+  
+  <!-- DataTables -->
+  <link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
   <!-- jQuery -->
   <script src="plugins/jquery/jquery.min.js"></script>
   <!-- SweetAlert2 -->
@@ -26,3 +30,16 @@
   <script type="text/javascript" src="_backend/_js/global.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/jquery-form/form@4.3.0/dist/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
 </head>
+
+<style>
+	.blocoBotoes{
+		margin-bottom:20px;
+	}
+	.checkboxGrids{
+		width:30px;
+		height:30px;
+	}
+	.thCkechboxGrid{
+		width:10px;
+	}
+</style>
