--- a/_frontend/_layout/footer.html
+++ b/_frontend/_layout/footer.html
@@ -22,9 +22,8 @@
 <!-- ./wrapper -->
 
 <!-- REQUIRED SCRIPTS -->
+  <script src="https://cdn.jsdelivr.net/gh/jquery-form/form@4.3.0/dist/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
 
-<!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
 
 <!-- DataTables  & Plugins -->
 <script src="plugins/datatables/jquery.dataTables.min.js"></script>
