--- a/_frontend/_layout/head.html
+++ b/_frontend/_layout/head.html
@@ -27,9 +27,7 @@
   <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
-  <script type="text/javascript" src="_backend/_js/global.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/jquery-form/form@4.3.0/dist/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
-</head>
+  <script type="text/javascript" src="_backend/_js/global.js"></script></head>
 
 <style>
 	.blocoBotoes{
