--- a/_frontend/_layout/menu.html
+++ b/_frontend/_layout/menu.html
@@ -1,5 +1,28 @@
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
+  <div class="modal fade" id="modalBusca">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          	<h4 class="modal-title"><span id="modalBuscaTitulo">Título modal</span></h4>
+          	<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modalBuscaCorpo">
+			Corpo modal
+        </div>
+        <div class="modal-footer justify-content-between">
+          	<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+          	<button type="button" class="btn btn-primary" id="modalBuscaSubmit">Selecionar</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
 <div class="wrapper">
 
   <!-- Preloader -->
