--- a/_frontend/_layout/menu.html
+++ b/_frontend/_layout/menu.html
@@ -274,7 +274,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Início</a></li>
+              <li class="breadcrumb-item"><a href="/">Início</a></li>
               <li class="breadcrumb-item active titlePage">Dashboard v2</li>
             </ol>
           </div><!-- /.col -->
