--- a/_frontend/_layout/menu.html
+++ b/_frontend/_layout/menu.html
@@ -220,6 +220,12 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
+                <a href="javascript:;" onclick="loadPage('grid', 'cliente_grid.php','Cliente')" class="nav-link">
+                  <i class="fas fa-plus nav-icon"></i>
+                  <p>Cliente</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="javascript:;" onclick="loadPage('grid', 'usuario_grid.php','Usuário')" class="nav-link">
                   <i class="far fa-user nav-icon"></i>
                   <p>Usuário</p>
