preparação para condições de pagamento

--- a/_frontend/_layout/menu.html
+++ b/_frontend/_layout/menu.html
@@ -221,8 +221,14 @@
             <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a href="javascript:;" onclick="loadPage('grid', 'cliente_grid.php','Cliente')" class="nav-link">
-                  <i class="fas fa-plus nav-icon"></i>
+                  <i class="fas fa-user nav-icon"></i>
                   <p>Cliente</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="javascript:;" onclick="loadPage('grid', 'condicao_pagamento_grid.php','Condição de pagamento')" class="nav-link">
+                  <i class="fas fa-money-check-alt nav-icon"></i>
+                  <p>Condição de pagamento</p>
                 </a>
               </li>
               <li class="nav-item">
