--- a/_backend/_view/_relatorio/style.css
+++ b/_backend/_view/_relatorio/style.css
@@ -3,7 +3,9 @@
     border-right: none;
     text-align: left;
   }
-
+  table{
+    margin-top: 10px;
+  }
   .head{
     border-bottom: 1px solid black;
     border-top: 1px solid black;
