--- a/_backend/_view/_relatorio/style.css
+++ b/_backend/_view/_relatorio/style.css
@@ -1,3 +1,21 @@
+  img
+  {
+      max-height: 85px;
+      max-width: auto;
+      margin: auto;
+      display: block;
+  }
+  .table-topo{
+    margin-bottom: 15px;
+  }
+  .topo{
+    border:none;
+    padding: 1px;
+  }
+  .sub-topo{
+    margin: 0px;
+    font-size: 12px;
+  }
   table, td, th {  
     border-left: none;
     border-right: none;
